@@ -3,6 +3,11 @@
 	* profiles/lfs-6.1/glibc, profiles/lfs-6.1/flex, profiles/lfs-6.1/perl:
 	  Fixed profile errors.
 
+2006-01-22 Gareth Jones <gareth_jones@users.berlios.de>
+
+	* reroot/libreroot/message.cc, reroot/libreroot/packet.cc: Clarified
+	  meaning of sender PID field in describe functions.
+
 2006-01-21 Gareth Jones <gareth_jones@users.berlios.de>
 
 	* reroot/ => oldreroot: Renamed to make room for new reroot.
